--- a/BeamWallet/ViewControllers/Main/Wallet/Transaction/TransactionShareView.xib
+++ b/BeamWallet/ViewControllers/Main/Wallet/Transaction/TransactionShareView.xib
@@ -3,7 +3,7 @@
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17126"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -30,14 +30,14 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clipsSubviews="YES" contentMode="scaleToFill" id="iN0-l3-epB" customClass="TransactionShareView" customModule="BeamWallet" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="700"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="800"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="initial_background" translatesAutoresizingMaskIntoConstraints="NO" id="YxJ-Sh-bxG">
-                    <rect key="frame" x="0.0" y="0.0" width="414" height="700"/>
+                    <rect key="frame" x="0.0" y="0.0" width="414" height="800"/>
                 </imageView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rVZ-DJ-puc" customClass="BaseView" customModule="BeamWallet" customModuleProvider="target">
-                    <rect key="frame" x="20" y="20" width="374" height="660"/>
+                    <rect key="frame" x="20" y="20" width="374" height="750"/>
                     <subviews>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="fXX-90-iGU">
                             <rect key="frame" x="10" y="30" width="354" height="168.5"/>
@@ -223,7 +223,7 @@
                             </subviews>
                         </stackView>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="0DC-IZ-J5f">
-                            <rect key="frame" x="10" y="485.5" width="354" height="39"/>
+                            <rect key="frame" x="10" y="544.5" width="354" height="39"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Transaction id:" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pKV-NA-KQs">
                                     <rect key="frame" x="0.0" y="0.0" width="93.5" height="17"/>
@@ -245,31 +245,59 @@
                                 </label>
                             </subviews>
                         </stackView>
-                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="Iea-jU-gdN">
-                            <rect key="frame" x="10" y="426.5" width="354" height="39"/>
+                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="qRC-t9-vTL">
+                            <rect key="frame" x="10" y="426.5" width="354" height="98"/>
                             <subviews>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Transaction fee:" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J35-0v-eA0">
-                                    <rect key="frame" x="0.0" y="0.0" width="102.5" height="17"/>
-                                    <fontDescription key="fontDescription" name="SFProDisplay-Bold" family="SF Pro Display" pointSize="14"/>
-                                    <color key="textColor" red="1" green="1" blue="1" alpha="0.50315710616438358" colorSpace="custom" customColorSpace="sRGB"/>
-                                    <nil key="highlightedColor"/>
-                                    <userDefinedRuntimeAttributes>
-                                        <userDefinedRuntimeAttribute type="boolean" keyPath="adjustFontSize" value="YES"/>
-                                    </userDefinedRuntimeAttributes>
-                                </label>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="0.00001" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gQZ-Bk-Iet" customClass="BMCopyLabel" customModule="BeamWallet" customModuleProvider="target">
-                                    <rect key="frame" x="0.0" y="22" width="52" height="17"/>
-                                    <fontDescription key="fontDescription" name="SFProDisplay-Regular" family="SF Pro Display" pointSize="14"/>
-                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                    <nil key="highlightedColor"/>
-                                    <userDefinedRuntimeAttributes>
-                                        <userDefinedRuntimeAttribute type="boolean" keyPath="adjustFontSize" value="YES"/>
-                                    </userDefinedRuntimeAttributes>
-                                </label>
+                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="yip-J7-H8k">
+                                    <rect key="frame" x="0.0" y="0.0" width="88.5" height="39"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Address type:" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vvY-qe-q9k">
+                                            <rect key="frame" x="0.0" y="0.0" width="88.5" height="17"/>
+                                            <fontDescription key="fontDescription" name="SFProDisplay-Bold" family="SF Pro Display" pointSize="14"/>
+                                            <color key="textColor" red="1" green="1" blue="1" alpha="0.50315710619999998" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <nil key="highlightedColor"/>
+                                            <userDefinedRuntimeAttributes>
+                                                <userDefinedRuntimeAttribute type="boolean" keyPath="adjustFontSize" value="YES"/>
+                                            </userDefinedRuntimeAttributes>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Regular" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ITC-oD-5Ed" customClass="BMCopyLabel" customModule="BeamWallet" customModuleProvider="target">
+                                            <rect key="frame" x="0.0" y="22" width="45" height="17"/>
+                                            <fontDescription key="fontDescription" name="SFProDisplay-Regular" family="SF Pro Display" pointSize="14"/>
+                                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <nil key="highlightedColor"/>
+                                            <userDefinedRuntimeAttributes>
+                                                <userDefinedRuntimeAttribute type="boolean" keyPath="adjustFontSize" value="YES"/>
+                                            </userDefinedRuntimeAttributes>
+                                        </label>
+                                    </subviews>
+                                </stackView>
+                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="Iea-jU-gdN">
+                                    <rect key="frame" x="0.0" y="59" width="102.5" height="39"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Transaction fee:" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J35-0v-eA0">
+                                            <rect key="frame" x="0.0" y="0.0" width="102.5" height="17"/>
+                                            <fontDescription key="fontDescription" name="SFProDisplay-Bold" family="SF Pro Display" pointSize="14"/>
+                                            <color key="textColor" red="1" green="1" blue="1" alpha="0.50315710616438358" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <nil key="highlightedColor"/>
+                                            <userDefinedRuntimeAttributes>
+                                                <userDefinedRuntimeAttribute type="boolean" keyPath="adjustFontSize" value="YES"/>
+                                            </userDefinedRuntimeAttributes>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="0.00001" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gQZ-Bk-Iet" customClass="BMCopyLabel" customModule="BeamWallet" customModuleProvider="target">
+                                            <rect key="frame" x="0.0" y="22" width="52" height="17"/>
+                                            <fontDescription key="fontDescription" name="SFProDisplay-Regular" family="SF Pro Display" pointSize="14"/>
+                                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <nil key="highlightedColor"/>
+                                            <userDefinedRuntimeAttributes>
+                                                <userDefinedRuntimeAttribute type="boolean" keyPath="adjustFontSize" value="YES"/>
+                                            </userDefinedRuntimeAttributes>
+                                        </label>
+                                    </subviews>
+                                </stackView>
                             </subviews>
                         </stackView>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="C54-eC-fpF">
-                            <rect key="frame" x="10" y="544.5" width="354" height="39"/>
+                            <rect key="frame" x="10" y="603.5" width="354" height="39"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Wallet id:" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AMm-iH-rxK">
                                     <rect key="frame" x="0.0" y="0.0" width="58.5" height="17"/>
@@ -293,7 +321,7 @@
                             </subviews>
                         </stackView>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="Lx8-gA-7k2">
-                            <rect key="frame" x="10" y="603.5" width="354" height="39"/>
+                            <rect key="frame" x="10" y="662.5" width="354" height="39"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Kernel id:" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gOC-Vp-gih">
                                     <rect key="frame" x="0.0" y="0.0" width="59.5" height="17"/>
@@ -321,8 +349,8 @@
                     <constraints>
                         <constraint firstAttribute="trailing" secondItem="0DC-IZ-J5f" secondAttribute="trailing" constant="10" id="3gP-48-3vn"/>
                         <constraint firstAttribute="trailing" secondItem="CWE-sA-P23" secondAttribute="trailing" constant="10" id="6Wv-SP-LX2"/>
+                        <constraint firstItem="qRC-t9-vTL" firstAttribute="top" secondItem="qBD-Gv-HKZ" secondAttribute="bottom" constant="20" id="9JH-IP-X8r"/>
                         <constraint firstItem="qBD-Gv-HKZ" firstAttribute="leading" secondItem="rVZ-DJ-puc" secondAttribute="leading" constant="10" id="BnF-I9-h6r"/>
-                        <constraint firstItem="Iea-jU-gdN" firstAttribute="leading" secondItem="rVZ-DJ-puc" secondAttribute="leading" constant="10" id="CCh-IK-J5t"/>
                         <constraint firstAttribute="trailing" secondItem="qBD-Gv-HKZ" secondAttribute="trailing" constant="10" id="CHR-tG-jcB"/>
                         <constraint firstItem="qBD-Gv-HKZ" firstAttribute="top" secondItem="CWE-sA-P23" secondAttribute="bottom" constant="20" id="DBs-iM-Vhb"/>
                         <constraint firstAttribute="trailing" secondItem="Lx8-gA-7k2" secondAttribute="trailing" constant="10" id="HQb-G5-X1b"/>
@@ -333,16 +361,16 @@
                         <constraint firstItem="CWE-sA-P23" firstAttribute="top" secondItem="lXv-f9-A2A" secondAttribute="bottom" constant="20" id="avN-ca-ZEF"/>
                         <constraint firstItem="lXv-f9-A2A" firstAttribute="leading" secondItem="rVZ-DJ-puc" secondAttribute="leading" id="b72-L8-J39"/>
                         <constraint firstItem="Lx8-gA-7k2" firstAttribute="top" secondItem="C54-eC-fpF" secondAttribute="bottom" constant="20" id="d1x-ox-6UM"/>
-                        <constraint firstItem="0DC-IZ-J5f" firstAttribute="top" secondItem="Iea-jU-gdN" secondAttribute="bottom" constant="20" id="d9x-HA-Zw9"/>
                         <constraint firstItem="C54-eC-fpF" firstAttribute="leading" secondItem="rVZ-DJ-puc" secondAttribute="leading" constant="10" id="dxO-p9-q18"/>
                         <constraint firstAttribute="trailing" secondItem="fXX-90-iGU" secondAttribute="trailing" constant="10" id="gi5-1E-ZLA"/>
-                        <constraint firstAttribute="trailing" secondItem="Iea-jU-gdN" secondAttribute="trailing" constant="10" id="hMh-ao-8hM"/>
-                        <constraint firstItem="Iea-jU-gdN" firstAttribute="top" secondItem="qBD-Gv-HKZ" secondAttribute="bottom" constant="20" id="jA3-ey-5Vl"/>
+                        <constraint firstItem="0DC-IZ-J5f" firstAttribute="top" secondItem="qRC-t9-vTL" secondAttribute="bottom" constant="20" id="hpn-Na-fME"/>
+                        <constraint firstItem="qRC-t9-vTL" firstAttribute="leading" secondItem="rVZ-DJ-puc" secondAttribute="leading" constant="10" id="mPt-V4-ccW"/>
                         <constraint firstItem="0DC-IZ-J5f" firstAttribute="leading" secondItem="rVZ-DJ-puc" secondAttribute="leading" constant="10" id="nbP-aX-Cbi"/>
                         <constraint firstItem="fXX-90-iGU" firstAttribute="leading" secondItem="rVZ-DJ-puc" secondAttribute="leading" constant="10" id="oaC-bj-hQB"/>
+                        <constraint firstAttribute="trailing" secondItem="qRC-t9-vTL" secondAttribute="trailing" constant="10" id="sjR-2o-rFH"/>
                         <constraint firstItem="lXv-f9-A2A" firstAttribute="top" secondItem="fXX-90-iGU" secondAttribute="bottom" constant="20" id="tyR-nF-vFd"/>
                         <constraint firstItem="Lx8-gA-7k2" firstAttribute="leading" secondItem="rVZ-DJ-puc" secondAttribute="leading" constant="10" id="yEN-sf-Oww"/>
-                        <constraint firstAttribute="height" constant="660" id="zO0-BH-qD4"/>
+                        <constraint firstAttribute="height" constant="750" id="zO0-BH-qD4"/>
                         <constraint firstAttribute="trailing" secondItem="C54-eC-fpF" secondAttribute="trailing" constant="10" id="zWO-02-gAs"/>
                     </constraints>
                     <userDefinedRuntimeAttributes>
@@ -364,6 +392,9 @@
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
+                <outlet property="addressTypeStackView" destination="yip-J7-H8k" id="kr4-pQ-Y4R"/>
+                <outlet property="addressTypeTitleLabel" destination="vvY-qe-q9k" id="aCn-v5-9Jd"/>
+                <outlet property="addressTypeValueLabel" destination="ITC-oD-5Ed" id="WGN-ac-ZnF"/>
                 <outlet property="amountLabel" destination="5iM-tX-TJG" id="QS2-kW-9dd"/>
                 <outlet property="amountStackView" destination="eFv-yG-A7p" id="Ohr-yR-jz9"/>
                 <outlet property="bgView" destination="YxJ-Sh-bxG" id="qiq-Hu-B33"/>
@@ -371,6 +402,7 @@
                 <outlet property="centeredStatusView" destination="TAr-9B-rWa" id="uNm-dY-yzJ"/>
                 <outlet property="centeredTypeLabel" destination="Hwj-cj-pzj" id="Mwv-1I-2IU"/>
                 <outlet property="dateLabel" destination="VgJ-e6-5xs" id="2AI-eN-ElZ"/>
+                <outlet property="feeStackView" destination="Iea-jU-gdN" id="w77-cL-EPe"/>
                 <outlet property="height" destination="zO0-BH-qD4" id="2iz-Gk-MSG"/>
                 <outlet property="kernelOffset" destination="d1x-ox-6UM" id="qGb-v3-clu"/>
                 <outlet property="kernelStackView" destination="Lx8-gA-7k2" id="Oga-1g-inr"/>
